[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sssharma9268 <sssharma9268@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
